--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.0",
+		"react-native-modal-dropdown": "^0.5.0",
 		"react-native-router-flux": "^4.0.0-beta.21",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
