--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"react-native-router-flux": "^4.0.0-beta.21",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
+		"redux-logger": "^3.0.6",
+		"redux-persist": "^4.9.1",
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
